tests/fixtures/compile_errors/keccak_called_with_wrong_type.fe
contract Foo:

    pub def bar() -> u256:
        wrong: u256[1]
        return keccak256(wrong)
